Final fix alignment for profile image on front-page and about page (for mobile/pc and various viewport sizes)

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -170,10 +170,10 @@
 .author {
   text-align: center;
   margin: 60px auto;
-  display: inline-block;
-  @include media-query($on-mobile) {
-    display: unset;
-  }
+  // display: inline-block;
+  // @include media-query($on-mobile) {
+  //   display: unset;
+  // }
 
   .author-avatar {
     object-fit: cover;
